[fix]ビルド不可、2回目以降の画面遷移不可を修正